all fonts working

--- a/wp-content/themes/kcpl_minisite/assets/sass/_base.scss
+++ b/wp-content/themes/kcpl_minisite/assets/sass/_base.scss
@@ -40,7 +40,7 @@ $m-grey : #7c7d7d;
 $s-grey : #e2e2e2;
 
 //fonts
-$minion:"minion";
+$minion:"minion-pro";
 $nimbus:"nimbus-sans";
 $nimbus-c:"nimbus-sans-condensed";
 
