--- a/wp-content/themes/kcpl_minisite/style.css
+++ b/wp-content/themes/kcpl_minisite/style.css
@@ -1162,7 +1162,7 @@ header .header-text {
 header .header-text .header-text-information {
   display: block;
   color: white;
-  font-family: "minion";
+  font-family: "minion-pro";
   font-style: italic;
   font-size: 20px;
   line-height: 22px;
