--- a/wp-content/themes/kcpl_minisite/style.css
+++ b/wp-content/themes/kcpl_minisite/style.css
@@ -1132,37 +1132,40 @@ or wrap each row of columns in a <div class="row"> */
 }
 
 /* Table of Content
-==================================================
-
-
+================================================== */
+/* line 5, assets/sass/_layout.scss */
+.section {
+  margin-bottom: 30px;
+}
 
 /* Header Styles
 ================================================== */
-/* line 9, assets/sass/_layout.scss */
+/* line 12, assets/sass/_layout.scss */
 header {
   background: url("assets/img/header-bg.jpg");
   background-size: cover;
   background-position: top center;
   height: 360px;
+  margin-bottom: 30px;
 }
 
-/* line 11, assets/sass/_layout.scss */
+/* line 14, assets/sass/_layout.scss */
 header .header-logo {
   display: block;
 }
-/* line 13, assets/sass/_layout.scss */
+/* line 16, assets/sass/_layout.scss */
 header .header-logo img {
   background-color: white;
   padding: 25px 20px 20px;
 }
-/* line 15, assets/sass/_layout.scss */
+/* line 18, assets/sass/_layout.scss */
 header .header-text {
   display: block;
   background-color: #137cc1;
   margin: 85px 15px 0px;
   padding: 26px;
 }
-/* line 17, assets/sass/_layout.scss */
+/* line 20, assets/sass/_layout.scss */
 header .header-text .header-text-information {
   font-size: 22px;
   color: white;
@@ -1173,7 +1176,7 @@ header .header-text .header-text-information {
   letter-spacing: .02em;
   margin-bottom: 10px;
 }
-/* line 18, assets/sass/_layout.scss */
+/* line 21, assets/sass/_layout.scss */
 header .header-text .header-text-callout {
   display: block;
   color: white;
@@ -1186,36 +1189,36 @@ header .header-text .header-text-callout {
 
 /* Homepage Styles
 ================================================== */
-/* line 25, assets/sass/_layout.scss */
+/* line 28, assets/sass/_layout.scss */
 .contact-form {
   display: block;
 }
 
-/* line 27, assets/sass/_layout.scss */
+/* line 30, assets/sass/_layout.scss */
 .contact-form .contact-form-header {
   display: block;
 }
-/* line 29, assets/sass/_layout.scss */
+/* line 32, assets/sass/_layout.scss */
 .contact-form .contact-form-header .contact-form-header-title {
   display: block;
 }
-/* line 30, assets/sass/_layout.scss */
+/* line 33, assets/sass/_layout.scss */
 .contact-form .contact-form-header .contact-form-header-subtitle {
   display: block;
 }
-/* line 32, assets/sass/_layout.scss */
+/* line 35, assets/sass/_layout.scss */
 .contact-form .contact-form-body {
   display: block;
 }
 
-/* line 35, assets/sass/_layout.scss */
+/* line 38, assets/sass/_layout.scss */
 .middle {
   display: block;
   background-color: #f65446;
   height: 150px;
 }
 
-/* line 37, assets/sass/_layout.scss */
+/* line 40, assets/sass/_layout.scss */
 .middle span {
   display: block;
   text-align: center;
@@ -1229,28 +1232,79 @@ header .header-text .header-text-callout {
   color: white;
 }
 
-/* line 40, assets/sass/_layout.scss */
-.post-content {
+/* line 43, assets/sass/_layout.scss */
+.post-container {
   display: block;
+  margin-bottom: 30px;
+}
+
+/* line 45, assets/sass/_layout.scss */
+.post-container .post {
+  display: block;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  padding: 20px;
+}
+/* line 47, assets/sass/_layout.scss */
+.post-container .post .post-content {
+  display: block;
+}
+/* line 49, assets/sass/_layout.scss */
+.post-container .post .post-content span {
+  display: block;
+  font-family: "minion-pro";
+  font-style: italic;
+  font-size: 24px;
+  line-height: 26px;
+  font-weight: 700;
+  color: white;
+}
+/* line 51, assets/sass/_layout.scss */
+.post-container .post .post-author {
+  display: block;
+}
+/* line 53, assets/sass/_layout.scss */
+.post-container .post .post-author span {
+  display: block;
+}
+/* line 57, assets/sass/_layout.scss */
+.post-container .author {
+  display: block;
+}
+/* line 59, assets/sass/_layout.scss */
+.post-container .author .post-author {
+  display: block;
+}
+/* line 61, assets/sass/_layout.scss */
+.post-container .author .post-author span {
+  display: block;
+  background-color: #e2e2e2;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  padding: 20px;
+  font-family: "nimbus-sans-condensed";
+  color: #323333;
+  text-transform: uppercase;
+  font-weight: 700;
 }
 
 /* Footer Styles
 ================================================== */
-/* line 45, assets/sass/_layout.scss */
+/* line 69, assets/sass/_layout.scss */
 footer {
   display: block;
   height: 240px;
   background-color: #137cc1;
 }
 
-/* line 47, assets/sass/_layout.scss */
+/* line 71, assets/sass/_layout.scss */
 footer .footer-text {
   display: block;
   top: 36%;
   position: relative;
   text-align: center;
 }
-/* line 49, assets/sass/_layout.scss */
+/* line 73, assets/sass/_layout.scss */
 footer .footer-text .footer-title {
   display: block;
   font-family: "nimbus-sans-condensed";
@@ -1260,7 +1314,7 @@ footer .footer-text .footer-title {
   color: #323333;
   text-transform: uppercase;
 }
-/* line 50, assets/sass/_layout.scss */
+/* line 74, assets/sass/_layout.scss */
 footer .footer-text .footer-subtitle {
   display: block;
   font-family: "minion-pro";
@@ -1268,7 +1322,7 @@ footer .footer-text .footer-subtitle {
   line-height: 18px;
   color: #323333;
 }
-/* line 51, assets/sass/_layout.scss */
+/* line 75, assets/sass/_layout.scss */
 footer .footer-text .footer-url {
   display: block;
   color: white;
