--- a/wp-content/themes/kcpl_minisite/assets/sass/_layout.scss
+++ b/wp-content/themes/kcpl_minisite/assets/sass/_layout.scss
@@ -89,7 +89,7 @@ header {
 	.post {
 		.post-content { display: block; }
 		.post-content {
-			span { display: block; font-family: $minion; font-style: italic; font-size: 24px; line-height: 26px; font-weight: 700; color: white; }
+			span { display: block; font-family: $minion; font-style: italic; font-size: 24px; line-height: 26px; font-weight: 700; color: white; text-indent: -0.4em; }
 		}
 		.post-author { display: block; }
 		.post-author {
