--- a/wp-content/themes/kcpl_minisite/style.css
+++ b/wp-content/themes/kcpl_minisite/style.css
@@ -1280,6 +1280,7 @@ header .header-text .header-text-callout {
   line-height: 10px;
   text-transform: uppercase;
   font-weight: 700;
+  color: #323333;
 }
 /* line 52, assets/sass/_layout.scss */
 .contact-form .contact-form-body .with_frm_style .frm_radio {
@@ -1290,36 +1291,40 @@ header .header-text .header-text-callout {
   position: relative;
   float: right;
 }
+/* line 56, assets/sass/_layout.scss */
+.contact-form .contact-form-body #frm_field_14_container {
+  margin-top: 50px;
+}
 @media only screen and (min-width: 768px) {
-  /* line 58, assets/sass/_layout.scss */
+  /* line 60, assets/sass/_layout.scss */
   .contact-form .contact-form-body .with_frm_style p.submit, .contact-form .contact-form-body .with_frm_style div.frm_submit, .contact-form .contact-form-body .with_frm_style.frm_login_form p.login-submit {
     position: absolute;
     right: 0;
     bottom: 30px;
   }
-  /* line 60, assets/sass/_layout.scss */
+  /* line 62, assets/sass/_layout.scss */
   .contact-form .contact-form-body #field_7jwk25 {
     width: 49%;
   }
-  /* line 61, assets/sass/_layout.scss */
+  /* line 63, assets/sass/_layout.scss */
   .contact-form .contact-form-body #field_axkmb8 {
     width: 48%;
     position: absolute;
     left: 50%;
     top: 90px;
   }
-  /* line 62, assets/sass/_layout.scss */
+  /* line 64, assets/sass/_layout.scss */
   .contact-form .contact-form-body #field_xs1dc8 {
     width: 32%;
   }
-  /* line 63, assets/sass/_layout.scss */
+  /* line 65, assets/sass/_layout.scss */
   .contact-form .contact-form-body #field_2ceh3d {
     width: 32%;
     position: absolute;
     left: 34%;
     top: 152px;
   }
-  /* line 64, assets/sass/_layout.scss */
+  /* line 66, assets/sass/_layout.scss */
   .contact-form .contact-form-body #field_bcq4pz {
     width: 31%;
     position: absolute;
@@ -1328,26 +1333,49 @@ header .header-text .header-text-callout {
   }
 }
 @media only screen and (min-width: 480px) and (max-width: 767px) {
-  /* line 69, assets/sass/_layout.scss */
+  /* line 71, assets/sass/_layout.scss */
   .contact-form .contact-form-body .frm_forms.with_frm_style {
     height: 656px;
   }
 }
 @media only screen and (max-width: 479px) {
-  /* line 75, assets/sass/_layout.scss */
+  /* line 77, assets/sass/_layout.scss */
   .contact-form .contact-form-body .frm_forms.with_frm_style {
     height: 670px;
   }
 }
+/* line 82, assets/sass/_layout.scss */
+.contact-form .contact-form-count {
+  display: block;
+  display: block;
+  position: absolute;
+  bottom: 105px;
+  left: 22px;
+  font-size: 10px;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-family: "nimbus-sans";
+  line-height: 10px;
+}
+/* line 84, assets/sass/_layout.scss */
+.contact-form .contact-form-count .contact-form-count-callout {
+  display: inline;
+  color: #323333;
+}
+/* line 86, assets/sass/_layout.scss */
+.contact-form .contact-form-count .contact-form-count-callout .contact-form-count-number {
+  display: inline;
+  color: #3ecb79;
+}
 
-/* line 81, assets/sass/_layout.scss */
+/* line 92, assets/sass/_layout.scss */
 .middle {
   display: block;
   background-color: #f65446;
   height: 150px;
 }
 
-/* line 83, assets/sass/_layout.scss */
+/* line 94, assets/sass/_layout.scss */
 .middle span {
   display: block;
   text-align: center;
@@ -1361,24 +1389,24 @@ header .header-text .header-text-callout {
   color: white;
 }
 
-/* line 86, assets/sass/_layout.scss */
+/* line 97, assets/sass/_layout.scss */
 .post-container {
   display: block;
   margin-bottom: 30px;
 }
 
-/* line 88, assets/sass/_layout.scss */
+/* line 99, assets/sass/_layout.scss */
 .post-container .post {
   display: block;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   padding: 20px;
 }
-/* line 90, assets/sass/_layout.scss */
+/* line 101, assets/sass/_layout.scss */
 .post-container .post .post-content {
   display: block;
 }
-/* line 92, assets/sass/_layout.scss */
+/* line 103, assets/sass/_layout.scss */
 .post-container .post .post-content span {
   display: block;
   font-family: "minion-pro";
@@ -1389,23 +1417,23 @@ header .header-text .header-text-callout {
   color: white;
   text-indent: -0.4em;
 }
-/* line 94, assets/sass/_layout.scss */
+/* line 105, assets/sass/_layout.scss */
 .post-container .post .post-author {
   display: block;
 }
-/* line 96, assets/sass/_layout.scss */
+/* line 107, assets/sass/_layout.scss */
 .post-container .post .post-author span {
   display: block;
 }
-/* line 100, assets/sass/_layout.scss */
+/* line 111, assets/sass/_layout.scss */
 .post-container .author {
   display: block;
 }
-/* line 102, assets/sass/_layout.scss */
+/* line 113, assets/sass/_layout.scss */
 .post-container .author .post-author {
   display: block;
 }
-/* line 104, assets/sass/_layout.scss */
+/* line 115, assets/sass/_layout.scss */
 .post-container .author .post-author span {
   display: block;
   background-color: #e2e2e2;
@@ -1420,21 +1448,21 @@ header .header-text .header-text-callout {
 
 /* Footer Styles
 ================================================== */
-/* line 112, assets/sass/_layout.scss */
+/* line 123, assets/sass/_layout.scss */
 footer {
   display: block;
   height: 240px;
   background-color: #137cc1;
 }
 
-/* line 114, assets/sass/_layout.scss */
+/* line 125, assets/sass/_layout.scss */
 footer .footer-text {
   display: block;
   top: 36%;
   position: relative;
   text-align: center;
 }
-/* line 116, assets/sass/_layout.scss */
+/* line 127, assets/sass/_layout.scss */
 footer .footer-text .footer-title {
   display: block;
   font-family: "nimbus-sans-condensed";
@@ -1444,7 +1472,7 @@ footer .footer-text .footer-title {
   color: #323333;
   text-transform: uppercase;
 }
-/* line 117, assets/sass/_layout.scss */
+/* line 128, assets/sass/_layout.scss */
 footer .footer-text .footer-subtitle {
   display: block;
   font-family: "minion-pro";
@@ -1452,7 +1480,7 @@ footer .footer-text .footer-subtitle {
   line-height: 18px;
   color: #323333;
 }
-/* line 118, assets/sass/_layout.scss */
+/* line 129, assets/sass/_layout.scss */
 footer .footer-text .footer-url {
   display: block;
   color: white;
