--- a/wp-content/themes/kcpl_minisite/style.css
+++ b/wp-content/themes/kcpl_minisite/style.css
@@ -1335,18 +1335,17 @@ header .header-text .header-text-callout {
 @media only screen and (min-width: 480px) and (max-width: 767px) {
   /* line 71, assets/sass/_layout.scss */
   .contact-form .contact-form-body .frm_forms.with_frm_style {
-    height: 656px;
+    height: 680px;
   }
 }
 @media only screen and (max-width: 479px) {
   /* line 77, assets/sass/_layout.scss */
   .contact-form .contact-form-body .frm_forms.with_frm_style {
-    height: 670px;
+    height: 710px;
   }
 }
 /* line 82, assets/sass/_layout.scss */
 .contact-form .contact-form-count {
-  display: block;
   display: block;
   position: absolute;
   bottom: 105px;
@@ -1367,15 +1366,65 @@ header .header-text .header-text-callout {
   display: inline;
   color: #3ecb79;
 }
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+  /* line 91, assets/sass/_layout.scss */
+  .contact-form .contact-form-count {
+    display: block;
+    position: absolute;
+    bottom: 212px;
+    left: 22px;
+    font-size: 10px;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-family: "nimbus-sans";
+    line-height: 10px;
+  }
+}
+@media only screen and (max-width: 479px) {
+  /* line 95, assets/sass/_layout.scss */
+  .contact-form .contact-form-count {
+    display: block;
+    position: absolute;
+    bottom: 242px;
+    left: 22px;
+    font-size: 10px;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-family: "nimbus-sans";
+    line-height: 10px;
+  }
+}
 
-/* line 92, assets/sass/_layout.scss */
+/* line 100, assets/sass/_layout.scss */
+.thank-you-form {
+  display: block;
+  height: 480px;
+  background-color: #f65446;
+}
+
+/* line 102, assets/sass/_layout.scss */
+.thank-you-form span {
+  display: block;
+  font: "minion-pro";
+  color: white;
+  font-style: italic;
+  font-weight: 700;
+  text-align: center;
+  top: 48%;
+  position: relative;
+  font-size: 24px;
+  line-height: 26px;
+  font-family: "minion-pro";
+}
+
+/* line 105, assets/sass/_layout.scss */
 .middle {
   display: block;
   background-color: #f65446;
-  height: 150px;
+  padding: 70px;
 }
 
-/* line 94, assets/sass/_layout.scss */
+/* line 107, assets/sass/_layout.scss */
 .middle span {
   display: block;
   text-align: center;
@@ -1389,24 +1438,24 @@ header .header-text .header-text-callout {
   color: white;
 }
 
-/* line 97, assets/sass/_layout.scss */
+/* line 110, assets/sass/_layout.scss */
 .post-container {
   display: block;
   margin-bottom: 30px;
 }
 
-/* line 99, assets/sass/_layout.scss */
+/* line 112, assets/sass/_layout.scss */
 .post-container .post {
   display: block;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   padding: 20px;
 }
-/* line 101, assets/sass/_layout.scss */
+/* line 114, assets/sass/_layout.scss */
 .post-container .post .post-content {
   display: block;
 }
-/* line 103, assets/sass/_layout.scss */
+/* line 116, assets/sass/_layout.scss */
 .post-container .post .post-content span {
   display: block;
   font-family: "minion-pro";
@@ -1417,23 +1466,23 @@ header .header-text .header-text-callout {
   color: white;
   text-indent: -0.4em;
 }
-/* line 105, assets/sass/_layout.scss */
+/* line 118, assets/sass/_layout.scss */
 .post-container .post .post-author {
   display: block;
 }
-/* line 107, assets/sass/_layout.scss */
+/* line 120, assets/sass/_layout.scss */
 .post-container .post .post-author span {
   display: block;
 }
-/* line 111, assets/sass/_layout.scss */
+/* line 124, assets/sass/_layout.scss */
 .post-container .author {
   display: block;
 }
-/* line 113, assets/sass/_layout.scss */
+/* line 126, assets/sass/_layout.scss */
 .post-container .author .post-author {
   display: block;
 }
-/* line 115, assets/sass/_layout.scss */
+/* line 128, assets/sass/_layout.scss */
 .post-container .author .post-author span {
   display: block;
   background-color: #e2e2e2;
@@ -1448,21 +1497,21 @@ header .header-text .header-text-callout {
 
 /* Footer Styles
 ================================================== */
-/* line 123, assets/sass/_layout.scss */
+/* line 136, assets/sass/_layout.scss */
 footer {
   display: block;
   height: 240px;
   background-color: #137cc1;
 }
 
-/* line 125, assets/sass/_layout.scss */
+/* line 138, assets/sass/_layout.scss */
 footer .footer-text {
   display: block;
   top: 36%;
   position: relative;
   text-align: center;
 }
-/* line 127, assets/sass/_layout.scss */
+/* line 140, assets/sass/_layout.scss */
 footer .footer-text .footer-title {
   display: block;
   font-family: "nimbus-sans-condensed";
@@ -1472,7 +1521,7 @@ footer .footer-text .footer-title {
   color: #323333;
   text-transform: uppercase;
 }
-/* line 128, assets/sass/_layout.scss */
+/* line 141, assets/sass/_layout.scss */
 footer .footer-text .footer-subtitle {
   display: block;
   font-family: "minion-pro";
@@ -1480,7 +1529,7 @@ footer .footer-text .footer-subtitle {
   line-height: 18px;
   color: #323333;
 }
-/* line 129, assets/sass/_layout.scss */
+/* line 142, assets/sass/_layout.scss */
 footer .footer-text .footer-url {
   display: block;
   color: white;
