--- a/wp-content/themes/kcpl_minisite/style.css
+++ b/wp-content/themes/kcpl_minisite/style.css
@@ -1422,14 +1422,26 @@ header .header-text .header-text-callout {
 .middle {
   display: block;
   background-color: #f65446;
-  padding: 70px;
+  padding: 70px 70px 17px;
 }
 
 /* line 107, assets/sass/_layout.scss */
-.middle span {
+.middle .middle-text {
   display: block;
   text-align: center;
-  top: 38%;
+  position: relative;
+  text-transform: uppercase;
+  font-family: "nimbus-sans-condensed";
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 42px;
+  color: white;
+}
+/* line 108, assets/sass/_layout.scss */
+.middle .middle-icon {
+  display: block;
+  text-align: center;
+  padding-top: 17px;
   position: relative;
   text-transform: uppercase;
   font-family: "nimbus-sans-condensed";
@@ -1439,24 +1451,24 @@ header .header-text .header-text-callout {
   color: white;
 }
 
-/* line 110, assets/sass/_layout.scss */
+/* line 111, assets/sass/_layout.scss */
 .post-container {
   display: block;
   margin-bottom: 30px;
 }
 
-/* line 112, assets/sass/_layout.scss */
+/* line 113, assets/sass/_layout.scss */
 .post-container .post {
   display: block;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   padding: 20px;
 }
-/* line 114, assets/sass/_layout.scss */
+/* line 115, assets/sass/_layout.scss */
 .post-container .post .post-content {
   display: block;
 }
-/* line 116, assets/sass/_layout.scss */
+/* line 117, assets/sass/_layout.scss */
 .post-container .post .post-content span {
   display: block;
   font-family: "minion-pro";
@@ -1467,23 +1479,23 @@ header .header-text .header-text-callout {
   color: white;
   text-indent: -0.4em;
 }
-/* line 118, assets/sass/_layout.scss */
+/* line 119, assets/sass/_layout.scss */
 .post-container .post .post-author {
   display: block;
 }
-/* line 120, assets/sass/_layout.scss */
+/* line 121, assets/sass/_layout.scss */
 .post-container .post .post-author span {
   display: block;
 }
-/* line 124, assets/sass/_layout.scss */
+/* line 125, assets/sass/_layout.scss */
 .post-container .author {
   display: block;
 }
-/* line 126, assets/sass/_layout.scss */
+/* line 127, assets/sass/_layout.scss */
 .post-container .author .post-author {
   display: block;
 }
-/* line 128, assets/sass/_layout.scss */
+/* line 129, assets/sass/_layout.scss */
 .post-container .author .post-author span {
   display: block;
   background-color: #e2e2e2;
@@ -1498,43 +1510,50 @@ header .header-text .header-text-callout {
 
 /* Footer Styles
 ================================================== */
-/* line 136, assets/sass/_layout.scss */
+/* line 137, assets/sass/_layout.scss */
 footer {
   display: block;
   height: 240px;
   background-color: #137cc1;
 }
 
-/* line 138, assets/sass/_layout.scss */
+/* line 139, assets/sass/_layout.scss */
 footer .footer-text {
   display: block;
   top: 36%;
   position: relative;
   text-align: center;
 }
-/* line 140, assets/sass/_layout.scss */
+/* line 141, assets/sass/_layout.scss */
 footer .footer-text .footer-title {
   display: block;
   font-family: "nimbus-sans-condensed";
   font-weight: 700;
   font-size: 22px;
-  line-height: 32px;
+  line-height: 26px;
   color: #323333;
   text-transform: uppercase;
+  margin: auto;
+  width: 38%;
 }
-/* line 141, assets/sass/_layout.scss */
+/* line 142, assets/sass/_layout.scss */
 footer .footer-text .footer-subtitle {
   display: block;
   font-family: "minion-pro";
   font-size: 18px;
-  line-height: 18px;
+  line-height: 20px;
   color: #323333;
 }
-/* line 142, assets/sass/_layout.scss */
+/* line 143, assets/sass/_layout.scss */
 footer .footer-text .footer-url {
   display: block;
   color: white;
   font-family: "nimbus-sans";
+  line-height: 20px;
+}
+/* line 145, assets/sass/_layout.scss */
+footer .footer-text .footer-url a {
+  color: white;
 }
 
 /* Homepage Styles
