--- a/wp-content/themes/kcpl_minisite/style.css
+++ b/wp-content/themes/kcpl_minisite/style.css
@@ -1349,7 +1349,7 @@ header .header-text .header-text-callout {
 .contact-form .contact-form-count {
   display: block;
   position: absolute;
-  bottom: 127px;
+  bottom: 128px;
   left: 22px;
   font-size: 10px;
   text-transform: uppercase;
@@ -1508,23 +1508,56 @@ header .header-text .header-text-callout {
   font-weight: 700;
 }
 
+/* line 134, assets/sass/_layout.scss */
+.limit {
+  display: block;
+  background-color: #137cc1;
+  border-radius: 10px;
+  padding: 14px;
+  position: absolute;
+  bottom: 56px;
+  right: 28px;
+  width: 277px;
+}
+
+/* line 136, assets/sass/_layout.scss */
+.limit .limit-content {
+  display: block;
+  font-family: "nimbus-sans";
+  font-weight: 700;
+  position: relative;
+  font-size: 19px;
+  line-height: 22px;
+  text-transform: uppercase;
+  color: white;
+}
+/* line 137, assets/sass/_layout.scss */
+.limit .limit-thank-you {
+  display: block;
+  color: white;
+  font-family: "minion-pro";
+  font-size: 15px;
+  line-height: 17px;
+  font-style: italic;
+}
+
 /* Footer Styles
 ================================================== */
-/* line 137, assets/sass/_layout.scss */
+/* line 143, assets/sass/_layout.scss */
 footer {
   display: block;
   height: 240px;
   background-color: #137cc1;
 }
 
-/* line 139, assets/sass/_layout.scss */
+/* line 145, assets/sass/_layout.scss */
 footer .footer-text {
   display: block;
   top: 36%;
   position: relative;
   text-align: center;
 }
-/* line 141, assets/sass/_layout.scss */
+/* line 147, assets/sass/_layout.scss */
 footer .footer-text .footer-title {
   display: block;
   font-family: "nimbus-sans-condensed";
@@ -1536,7 +1569,7 @@ footer .footer-text .footer-title {
   margin: auto;
   width: 38%;
 }
-/* line 142, assets/sass/_layout.scss */
+/* line 148, assets/sass/_layout.scss */
 footer .footer-text .footer-subtitle {
   display: block;
   font-family: "minion-pro";
@@ -1544,14 +1577,14 @@ footer .footer-text .footer-subtitle {
   line-height: 20px;
   color: #323333;
 }
-/* line 143, assets/sass/_layout.scss */
+/* line 149, assets/sass/_layout.scss */
 footer .footer-text .footer-url {
   display: block;
   color: white;
   font-family: "nimbus-sans";
   line-height: 20px;
 }
-/* line 145, assets/sass/_layout.scss */
+/* line 151, assets/sass/_layout.scss */
 footer .footer-text .footer-url a {
   color: white;
 }
